brat/test/golden/error/bad_rpat.brat.golden
Error in test/golden/error/bad_rpat.brat@2:8
test = cons(1, [])
       ^^^^^^^^^^^

  "cons" is not a valid constructor for type Bool

